# fdeflate

./: CHANGES.md  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deflate.rs  inflate.rs  inflate_bytewise.rs  inflate_bytewise2.rs  inflate_bytewise3.rs  inflate_miniz.rs  inflate_split.rs  stored.rs
src/: compress.rs  decode.rs  decompress.rs  huffman.rs  lib.rs  main.rs  tables.rs
src/compress/: bitstream.rs  bitwriter.rs  bt_matchfinder.rs  deflate.rs  fast.rs  hc_matchfinder.rs  ht_matchfinder.rs  medium.rs  mod.rs  slow.rs  ultrafast.rs
src/compress/matchfinder/: hashchain.rs  hashtable.rs  hybrid.rs  mod.rs
src/compress/parse/: greedy.rs  lazy.rs  mod.rs  rle.rs
src/decompress/tests/: test_utils.rs
