[package]
name = "fdeflate"
version = "0.2.0"
edition = "2021"

# note: when changed, also update test runner in `.github/workflows/rust.yml`
rust-version = "1.57.0"

license = "MIT OR Apache-2.0"
description = "Fast specialized deflate implementation"
authors = ["The image-rs Developers"]

# crates.io metadata
documentation = "https://docs.rs/fdeflate"
repository = "https://github.com/image-rs/fdeflate"
homepage = "https://github.com/image-rs/fdeflate"
categories = ["compression"]

[dependencies]
simd-adler32 = "0.3.4"

[dev-dependencies]
criterion = "0.3"
miniz_oxide = "0.6.0"
rand = "0.8.5"
