[package]
name = "fdeflate"
version = "0.4.0"
edition = "2021"
publish = false

# note: when changed, also update test runner in `.github/workflows/rust.yml`
rust-version = "1.88.0"

license = "MIT OR Apache-2.0"
description = "Fast specialized deflate implementation"
authors = ["The image-rs Developers"]
include = ["/src", "/tests", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

# crates.io metadata
documentation = "https://docs.rs/fdeflate"
repository = "https://github.com/image-rs/fdeflate"
homepage = "https://github.com/image-rs/fdeflate"
categories = ["compression"]

[dependencies]
simd-adler32 = "0.3.4"

[dev-dependencies]
miniz_oxide = "0.8.9"
rand = "0.8.5"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }
